--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/Aslijia/blockingqueue/issues"
   },
-  "homepage": "https://github.com/Aslijia/blockingqueue#readme"
+  "homepage": "https://github.com/Aslijia/blockingqueue#readme",
+  "dependencies": {
+    "redis": "^2.8.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.7.2",
+    "@types/redis": "^2.8.13"
+  }
 }
